More corrections from Liona.

--- a/tex/chapter-01.tex
+++ b/tex/chapter-01.tex
@@ -100,14 +100,14 @@ bodies, are strongly manifested in living ones, but are common to both.
 This area, if it exists in the form in which Bose tried to establish it, of
 phenomena common to inert and living natural bodies, introduces nothing new in
 the sharp distinction between them.  The distinction must manifest itself in
-this area, as well, if only the latter's existence would be proven.
+this area, as well, if only its existence would be proven.
 
 We must approach phenomena here, as well, not in the aspect in which Bose
 approached them, not as phenomena of \emph{life}, but as phenomena of living
 natural bodies, of \emph{living matter}.
 
-To avoid any misunderstanding, I shall avoid the concepts `life', `living' in
-all further exposition, since, if we stepped outside those
+To avoid any misunderstanding, I shall avoid the concepts `life', and `living'
+in all further exposition, since, if we proceeded from those
 [phenomena],\footnoteTransl{inserted by transl. [---Pav]} we would inevitably
 go beyond the limits of the phenomena of life studied in science, into a
 foreign area or science---the area of philosophy, or, as is taking place in the
@@ -151,22 +151,30 @@ becoming,\footnoteTransl{становлении, \eg\ formation. [---Pav]} of mo
 all of its smallest material and energetic particles.  We can express this
 state of organization in the course of time---in a generalization of mechanics,
 and in a simplified model---as being such that none of its points (material or
-energetic) lawfully returns to, ends up in a place, in a point of the biosphere
-which it occupied at any earlier moment.  It can return to one of them only on
-the order of mathematical accident, of very small probability.
+energetic) lawfully returns to, \altStylePhr{or}\footnoteEd{
+	Phrases like this have been inserted for more familiar reading to
+	today's audience.  Otherwise, Vernadsky's style often includes
+	restating a phrase with a slight change in meaning to communicate an
+	intended range of ambiguity: a style which can be better understood as
+	coming from a living speaker, rather than from a page of reference
+	`facts'.  [---Pav]
+} ends up in a place, \altStylePhr{or} a point of the biosphere, which it
+occupied at any earlier moment.  It can return to one of them only on the order
+of mathematical accident, of very small probability.
 
 The Earth's envelope, the biosphere, embracing the whole globe, has clearly
-distinct dimensions, is determined to a large degree by the existence of living
-matter in it---\emph{populating}\footnoteRus{заселена} it.  There is a
-constant material and energetic exchange, materially expressed in the motion of
-atoms brought on by living matter, between its inert non-living part, its inert
-natural bodies, and the living matter inhabiting it.  This exchange in the
-course of time is expressed as lawfully changing, constantly tending toward the
-stability of an \emph{equilibrium}.\footnoteRus{равновесием}  The latter
-permeates the whole biosphere, and this \emph{biogenic flow of
-atoms}\footnoteRus{биогенный ток атомов} creates the biosphere to a large
-extent.  The biosphere is thus connected inseparably and inherently with the
-living matter populating it throughout the whole duration of geological time.
+distinct dimensions, \altStylePhr{and} is determined to a large degree by the
+existence of living matter in it---\emph{populating}\footnoteRus{заселена} it.
+There is a constant material and energetic exchange, materially expressed in
+the motion of atoms brought about by living matter, between its inert
+non-living part, its inert natural bodies, and the living matter inhabiting it.
+This exchange in the course of time is expressed as lawfully changing,
+constantly tending toward the stability of an
+\emph{equilibrium}.\footnoteRus{равновесием}  The latter permeates the whole
+biosphere, and this \emph{biogenic flow of atoms}\footnoteRus{биогенный ток
+атомов} creates the biosphere to a large extent.  The biosphere is thus
+connected inseparably and inherently with the living matter populating it
+throughout the whole duration of geological time.
 
 The planetary, cosmic significance of living matter is distinctly expressed in
 this biogenic flow of atoms, and in the energy connected with it.  That, since
@@ -176,14 +184,14 @@ equilibrium, the state of organization: $\mathrm{biosphere} \leftrightarrow
 \mathrm{living matter}$, constantly penetrates.
 
 The biosphere stretches from the surface of the geoid up to the boundary of the
-stratosphere, penetrating in it; it, however, would be unlikely to be able to
+stratosphere, penetrating into it; it, however, would be unlikely to be able to
 reach the ionosphere---the Earth's electromagnetic vacuum, which is just now
 entering the scientific consciousness.  Living matter reaches below the surface
 of the geoid into the stratisphere, and into the top regions of the
 metamorphic, and of the granitic envelope.  It rises up to
 20--$25\,\mathrm{km}$ above the surface of the geoid, and extends down to
 4--$5\,\mathrm{km}$ below that level on average.  These boundaries change in
-the course of time, and, there are places of, it is true, small extent where
+the course of time, and, there are places, it is true, of small extent, where
 they are far beyond these.  Apparently, living matter must reach deeper than
 $11\,\mathrm{km}$ at places in the depths of the ocean, and its presence has
 been established deeper than $6\,\mathrm{km}$.\footnoteEd{
@@ -197,7 +205,7 @@ stratosphere, and by this means living matter has already exceeded
 $40\,\mathrm{km}$ above the surface of the geoid, and is quiclky rising.
 
 Apparently, a process of incessant expansion of the boundaries of the
-biosphere: its population with living matter, is observable in the course of
+biosphere: its population by living matter, is observable in the course of
 geological time.
 
 
@@ -212,11 +220,11 @@ biogeochemical state of organization, no point (for example, atom or chemical
 element) ever returns to a position identical with a previous one for eons.
 
 This characteristic of the biosphere was expressed very prominently and vividly
-by Leibnitz[1646--1716] in one of his philosophical reflections, it seems to
+by Leibniz [1646--1716] in one of his philosophical reflections, it seems to
 me, in the \rtitle{Theodicy}.\footnoteTransl{
 	See \refsmartcite{leibnitz1985theodicy, leibnitz1900oeuvres-v2}.
-}  He was among a large company from the high society in a large garden, he
-recounts, at the end of the $18^\mathrm{th}$ c., and Leibniz, speaking of the
+}  At the end of the $18^\mathrm{th}$ c., Leibniz recounts, he was among a
+large company from the high society in a large garden, and speaking of the
 infinite variety of nature, and of the infinite perfectability of the mind's
 precision,\footnoteRus{бесконечной четкости ума} indicated that two leaves of
 any tree or plant are never completely identical.  All efforts of the large
@@ -228,7 +236,7 @@ centuries earlier.\footnote{
 	See, for example, \cite[кн.~2,
 	с.~54]{carus1913prirode}\nocite{carus1936prirode, carus1851nature}.}
 
-This is manifested for us in everyday life in
+This is manifested for us in everyday life in [individual]
 \emph{identity},\footnoteRus{личности} in the absence of two identical
 individuals, indistinguishable from one another.  It is manifested in biology
 in the fact that every mean \emph{individuum}\footnoteRus{индивидуум} of living
@@ -243,19 +251,19 @@ Especially characteristic in the structure of \emph{the biosphere is its
 physical-chemical, and geometric \emph{(\autoref{sec:47})} heterogeneity}.  It
 consists of living and inert matter, which are sharply separate in their
 genesis and structure throughout all of geological time.  Living organisms,
-\ie\ all living matter, are born from living matter, form generations in the
-course of time, which never arise directly, outside of such a living organism,
-from any possible inert matter on the planet.  There is, however, an inherent,
-unceasing connection\footnoteRus{непрерывная, никогда не прекращающаяся связь}
-between inert and living matter, which can be expressed as an incessant
-biogenic flow of atoms from the living matter into the inert matter of the
-biosphere, and vice versa.  This biogenic flow of atoms is originated by living
-matter.  It is expressed in its always unceasing breathing, feeding,
-reproduction, etc.
+\ie\ all living matter, are born from living matter, \altStylePhr{and} form
+generations in the course of time, which never arise directly, outside of such
+a living organism, from any possible inert matter on the planet.  There is,
+however, an inherent, unceasing connection\footnoteRus{непрерывная, никогда не
+прекращающаяся связь} between inert and living matter, which can be expressed
+as an incessant biogenic flow of atoms from the living matter into the inert
+matter of the biosphere, and vice versa.  This biogenic flow of atoms is
+originated by living matter.  It is expressed in its always unceasing
+breathing, feeding, reproducing, etc.
 
-This heterogeneity in the biosphere, unceasing during all geological time, is
-the main dominant factor, strongly distinguishing it from all other envelopes
-of the globe.
+This heterogeneity in the biosphere, unceasing throughout all geological time,
+is the main dominant factor, strongly distinguishing it from all other
+envelopes of the globe.
 
 It goes deeper than the phenomena usually studied in natural science---to the
 properties of space-time, which scientific thought has approached only in our
@@ -295,18 +303,18 @@ analysis for our purposes.  These are bodies or phenomena, formed by natural
 processes,---\emph{natural objects}.
 
 Living organisms, living matter, are not the only natural bodies of the
-biosphere, but rather the main mass of the biosphere's matter forms non-living
-bodies or phenomena, which I will be referring to as
+biosphere, but rather the main mass of the biosphere's matter is in the form of
+non-living bodies or phenomena, which I will be referring to as
 \emph{inert}.\footnoteRus{косными}  Such are, for example, gases, the
 atmosphere, rocks, a chemical element, an atom, quartz, serpentine, etc.
 
-In addition to living and inert natural bodies, a great role in the biosphere
-play its lawful structures, heterogeneous natural bodies, such as soils, silts,
-surface waters, the very biosphere, etc., which consist of living and inert
-natural bodies existing at the same time, forming complex, lawful inert-living
-structures.\footnoteRus{косно-живые структуры}  I will be calling these complex
-natural bodies \emph{bioinert} natural bodies.\footnoteRus{биокосными
-природными телами}
+In addition to living and inert natural bodies, its lawful structures,
+heterogeneous natural bodies, such as soils, silts, surface waters, the very
+biosphere, etc., which consist of living and inert natural bodies existing at
+the same time, forming complex, lawful inert-living
+structures,\footnoteRus{косно-живые структуры} play a great role in the
+biosphere.  I will be calling these complex natural bodies \emph{bioinert}
+natural bodies.\footnoteRus{биокосными природными телами}
 
 The difference between living and inert natural bodies is so great, as we shall
 see further on, that the transformation of one into the other is never and
@@ -315,8 +323,8 @@ in scientific work.  As we shall see, such a process is deeper than the
 physical-chemical phenomena known to us.
 
 The related \emph{heterogeneity of the biosphere's structure}, the sharp
-distinction between its matter and its energy in the form of living, and in the
-form of inert natural bodies is its main manifestation.
+distinction between its matter and its energy in the form of living, and inert
+natural bodies, is its main manifestation.
 
 
 \Section % 7
