Corrections. Periodic update.

--- a/tex/bib/thought.bib
+++ b/tex/bib/thought.bib
@@ -377,6 +377,7 @@
 
 @book { carus1913prirode,
   title = {О природе вещей},
+  userb = {On the Nature of Things},
   author = {Тит Лукре́ций Кар},
   year = {1913},
   hyphenation = {russian},
