--- a/tex/chapter-01.tex
+++ b/tex/chapter-01.tex
@@ -170,11 +170,11 @@ the motion of atoms brought about by living matter, between its inert
 non-living part, its inert natural bodies, and the living matter inhabiting it.
 This exchange in the course of time is expressed as lawfully changing,
 constantly tending toward the stability of an
-\emph{equilibrium}.\footnoteRus{равновесием}  The latter permeates the whole
-biosphere, and this \emph{biogenic flow of atoms}\footnoteRus{биогенный ток
-атомов} creates the biosphere to a large extent.  The biosphere is thus
-connected inseparably and inherently with the living matter populating it
-throughout the whole duration of geological time.
+\emph{equilibrium}.\footnoteRus{равновесием}  It permeates the whole biosphere,
+and this \emph{biogenic flow of atoms}\footnoteRus{биогенный ток атомов}
+creates the biosphere to a large extent.  The biosphere is thus connected
+inseparably and inherently with the living matter populating it throughout the
+whole duration of geological time.
 
 The planetary, cosmic significance of living matter is distinctly expressed in
 this biogenic flow of atoms, and in the energy connected with it.  That, since
@@ -191,7 +191,7 @@ of the geoid into the stratisphere, and into the top regions of the
 metamorphic, and of the granitic envelope.  It rises up to
 20--$25\,\mathrm{km}$ above the surface of the geoid, and extends down to
 4--$5\,\mathrm{km}$ below that level on average.  These boundaries change in
-the course of time, and, there are places, it is true, of small extent, where
+the course of time, and, there are places of, it is true, small extent, where
 they are far beyond these.  Apparently, living matter must reach deeper than
 $11\,\mathrm{km}$ at places in the depths of the ocean, and its presence has
 been established deeper than $6\,\mathrm{km}$.\footnoteEd{
@@ -204,9 +204,9 @@ inseparable from other organisms---insects, plants, microbes,---into the
 stratosphere, and by this means living matter has already exceeded
 $40\,\mathrm{km}$ above the surface of the geoid, and is quiclky rising.
 
-Apparently, a process of incessant expansion of the boundaries of the
-biosphere: its population by living matter, is observable in the course of
-geological time.
+Evidently, a process of incessant expansion of the boundaries of the biosphere:
+its population by living matter, is observable in the course of geological
+time.
 
 
 \Section % 4
@@ -234,7 +234,9 @@ time, but as en erudite, taking it from his readings.  It is possible to trace
 that precisely this example of the leaves appeared in philosophical folklore
 centuries earlier.\footnote{
 	See, for example, \cite[кн.~2,
-	с.~54]{carus1913prirode}\nocite{carus1936prirode, carus1851nature}.}
+	с.~54]{carus1913prirode}\nocite{carus1936prirode, carus1851nature}.
+	(\Eg, \cite[book~2]{carus1851nature}. ---Pav)
+}
 
 This is manifested for us in everyday life in [individual]
 \emph{identity},\footnoteRus{личности} in the absence of two identical
