Translated section 34 for MABchen :).

--- a/tex/chapter-02.tex
+++ b/tex/chapter-02.tex
@@ -361,8 +361,49 @@ ideal constructs.
 . . .
 
 \Section % 34
+Science, therefore, is by no means a logical construct, a truth-seeking
+apparatus.  Scientific truth can never be known by logic, but rather only by
+living.  \emph{Action }is a characteristic of scientific thought.  Scientific
+thought---scientific work---scientific knowledge occurs in the thick of life,
+from which it is inseparable, and by its very existence gives rise to its own
+active manifestations, which themselves are not only means of disseminating
+scientific knowledge, but also create the countless forms of its detection,
+give rise to countless major and minor sources of the growth of scientific
+knowledge.
 
-. . .
+The human individual, even in the time of our state of organization of science,
+is, thus, far from always the creator of scientific ideas and scientific
+knowledge; the research scientist, living a life of purely scientific work, of
+large or small extent, is \emph{one} of the creators of scientific knowledge.
+Individual people, connected to scientifically important, but often foreign to
+science, considerations, revealing scientific facts and scientific
+generalizations, sometimes fundamental and decisive, hypotheses and theories
+widely used in science, come forward accidentally, \ie\ by the means of
+everyday life, out of the thick of life along with the scientist.
+
+Such scientific work and scientific searches, proceeding from actions outside
+the scientific, consciously organized work of mankind, is the active-scientific
+manifestation of the living of the human cognitive environment at a given time,
+a manifestation of life's scientific environment.  The part of the scientific
+structure of the new scientific thought, introduced in science in this way, is
+by its mass, and by its importance for the outcome of history comparable, it
+seems to me, to what is introduced into science by the scientists consciously
+working on it, to what is revealed by the consciously organized scientific
+work.  Without the simultaneous existence of scientific organization and a
+scientific environment, this ubiquitous form of mankind's scientific work,
+tempestuously unconscious, disappears and is forgotten to a large extent, as
+this occurred in the regions of Mediterranean civilization over the course of
+long centuries in the Christianized Roman Empire, in Persian, Arabic, Berber,
+Germanic, Slavic, and Celtic societies of Western Europe, in connection with
+the national breakdown of the government formations existing in them during the
+$4^\mathrm{th}$--$12^\mathrm{th}$ c.\ AD, and, often, later.  Science loses its
+achievements in the course of time, and tempestuously comes back to them.
+
+The history of science, and the history of mankind, reveals such events at
+every step.  The flourishing of Hellenic science left aside, and did not make
+use of, used late (after millennia) such achievements of everyday Chaldean
+science, as, for example, Babylonian algebra.
+
 
 \Section % 35
 
