Section 35: Periodic commit.

--- a/tex/bib/thought.bib
+++ b/tex/bib/thought.bib
@@ -467,3 +467,38 @@
   publisher =	{Наука},
   year =	{1988},
 }
+
+@book { julien1931histoire,
+  author =	{Charles André Julien},
+  title =	{Histoire de l'Afrique du Nord: Tunisie, Algérie, Maroc},
+  series =	{Biblioth{\`e}que Historique},
+  location =	{Paris},
+  publisher =	{Payot},
+  year =	{1931},
+  lccn =	{31021408},
+  url =		{http://books.google.com/books?id=MQohAAAAMAAJ},  
+  urldate =	{2013-02-22},
+  language =	{french},
+}
+
+@article { gsell1926memoires,
+  author =	{Stéphane Gsell},
+  journal =	{Memoires de l'Académie des Inscriptions},
+  title =	{La Tripolitaine et le Sahara au IIIe siècle de notre ère},
+  year =	{1926},
+  volume =	{43},
+}
+
+@book { gautier1927siecles,
+  author =	{Emile-Félix Gautier},
+  title =	{L'islamisation de l'Afrique du Nord. Les siècles obscurs du
+	Maghreb},
+  location =	{Paris},
+  year =	{1927},
+  publisher =	{Payot},
+  lccn =	{lc28016399},
+  series =	{Biblioth{\`e}que historique},
+  url =		{http://books.google.com/books?id=FVgbAAAAIAAJ},
+  urldate =	{2013-02-22},
+  language =	{french},
+}
