--- a/tex/chapter-02.tex
+++ b/tex/chapter-02.tex
@@ -406,6 +406,43 @@ science, as, for example, Babylonian algebra.
 
 
 \Section % 35
+This means---the introduction of scientific discoveries, foreign to \emph{the
+scientific searches of the individual personality}, to which life gives rise
+everywhere, and their incorporation into the organized manifestation of the
+scientific work of scientists, the scientific apparatus of a given
+time,---however, is not the only means by which the environment of life impacts
+science.
+
+This, in and of itself collective, \altStylePhr{and,} from a scientific point
+of view, unconscious work,\footnote{%
+	Uncoscious in the sense that the scientific result, or phenomenon of
+	life, which creates the scientifically important or necessary fact (or
+	generalization), did not have \emph{that goal} at its creation or
+	manifestation.
+} \emph{in the course of historical time} and through the
+changes occurring in this way, creates the new and important, which can be
+registered and can become the result of scientific achievements of primary
+importance, as, for example, were the circumnavigation of the Earth, the
+discovery of America, the fall of the Persian Kingdom (destroyed by Alexander
+the Great), as well as the Chinese kingdoms and Central Asian cultural centers,
+the defeat of Genghis Khan, the victory of the Christian church and religion,
+the emergence of Mohammedanism and its religious-political identification, as
+well as other major and minor events of political life.
+
+No less, but, often, rather more powerful have been those changes, which have
+occurred in economic life, in agriculture, or in individual manifestations of
+success in everyday life, like, for example, the introduction of the camel
+(dromedary) in the desert and semidesert areas of Northern Africa,\footnote{%
+	\cite[p.~178]{julien1931histoire}.  See
+	\cite{gsell1926memoires}; \cite[p.~181]{gautier1927siecles} for
+	the significance of this phenomenon.
+} and the discovery of printing in the Rhenish countries in Europe.\footnote{%
+	We must never forget that the printing press was discovered in Korea a
+	few centuries before Coster and Gutenberg, and was widely used in the
+	Chinese kingdom.  There, however, the factor which gave it a living
+	power did not exist: active scientific work was lacking in Korea and
+	China at the time.
+}
 
 . . .
 
